[tool.poetry]
name = "repl_nix_fryhujtyr8ycym5c4ty58h9745789578979796579567979thgdmmkjkhkhg"
version = "0.1.0"
description = ""
authors = ["yuighjbmntrr <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
psutil = "^5.9.0"
requests = "^2.27.1"
motor = "^2.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
